scroll snapping fixed flex fixed scrollbar removed

--- a/index.css
+++ b/index.css
@@ -1,3 +1,8 @@
+body {
+  overflow: hidden;
+  margin: 0;
+}
+
 img {
   display: block;
   margin-left: auto;
@@ -10,13 +15,22 @@ h3 {
   text-align: center;
 }
 
-div img {
-  scroll-snap-align: start;
+.container {
+  overflow-y: scroll;
+  scroll-padding: 0px;
+  padding: 0;
+  height: 100vh;
+  scroll-snap-points-y: repeat(100vh);
+  scroll-snap-type: y mandatory;
 }
 
-.container {
-  scroll-snap-type: y mandatory;
-  overflow: scroll;
+::-webkit-scrollbar {
+  width: 0;
+}
+
+::-webkit-scrollbar-thumb {
+  background-clip: padding-box;
+  background-color: rgba(255, 255, 255, 0.5);
 }
 
 div.fixed {
@@ -26,13 +40,11 @@ div.fixed {
   margin-right: 2rem;
 }
 
-section.content {
+.content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   height: 100vh;
-  padding: 10rem;
-  box-sizing: border-box;
-}
-
-.container > section {
   scroll-snap-align: start;
 }
 
